# monotonic_align

./: README.md  example.py  main.py  monotonic_align.pyi  monotonic_align_cpp.cpp  py.py  pyproject.toml  setup.py
monotonic_align/: __init__.py  __init__.pyi  monotonic_align_cpp.cpp  ops.py
monotonic_align_cpp/: __init__.py  monotonic_align_cpp.cpp
