[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "monotonic_align"
version = "0.0.30"
authors = [
    {name = "Ivan Shivalov"},
]
description = "Module with search monotonic alignment algorithm"
readme = "README.md"
license = {file = "LICENSE"}
urls = {url = "https://github.com/intexcor/monotonic_align"}

dependencies = [
    "torch",
]

[tool.setuptools.packages.find]
include = [
    "monotonic_align",
]